<resources>
    <string name="tb_app_name">Taskbar</string>
    <string name="tb_app_name_debug">Taskbar (Debug)</string>
    <string name="tb_taskbar_is_active">Taskbar is active</string>
    <string name="tb_click_to_open_settings">Click to open settings</string>
    <string name="tb_action_show">Show Taskbar</string>
    <string name="tb_action_hide">Hide Taskbar</string>
    <string name="tb_action_show_alt">Show</string>
    <string name="tb_action_hide_alt">Hide</string>
    <string name="tb_action_quit">Quit</string>
    <string name="tb_action_grant_permission">Grant permission</string>
    <string name="tb_action_open_settings">Open Settings</string>
    <string name="tb_permission_dialog_title">Permission needed</string>
    <string name="tb_permission_dialog_message">%s requires permission to draw over other apps before it can start.\n\n</string>
    <string name="tb_permission_dialog_instructions_phone">Please press \"Grant Permission\" and ensure that \"Permit drawing over other apps\" is enabled.</string>
    <string name="tb_permission_dialog_instructions_tv">Please press \"Open Settings\" to open the Android TV app settings menu. Select \"Special app access\", then select \"Display over other apps\" and ensure that Taskbar is enabled.</string>
    <string name="tb_pref_header_general">General settings</string>
    <string name="tb_pref_title_start_menu_layout">Start menu layout</string>
    <string name="tb_pref_title_background_tint">Background tint</string>
    <string name="tb_pref_title_scrollbar">Use fast scrollbar on start menu</string>
    <string name="tb_pref_title_start_on_boot">Launch on boot</string>
    <string-array name="tb_pref_start_menu_list">
        <item>Grid</item>
        <item>List</item>
    </string-array>
    <string name="tb_pref_header_recent_apps">Recent apps</string>
    <string name="tb_pref_title_enable_recents">Enable/disable usage access</string>
    <string name="tb_pref_title_recents_refresh_interval">Refresh rate</string>
    <string name="tb_pref_title_amount_of_recents">Recent apps to display</string>
    <string-array name="tb_pref_recents_amount">
        <item>Apps used within the past day</item>
        <item>Apps used after Taskbar start</item>
        <item>All apps (may reduce performance)</item>
    </string-array>
    <string-array name="tb_pref_recents_amount_alt">
        <item>Apps used within the past day</item>
        <item>Apps used after Taskbar start</item>
        <item>All apps (may reduce performance)</item>
        <item>Running apps only</item>
    </string-array>
    <string name="tb_pref_title_sort_order">Sort order</string>
    <string-array name="tb_pref_sort_order">
        <item>Recently used (descending)</item>
        <item>Recently used (ascending)</item>
        <item>Most time used (descending)</item>
        <item>Most time used (ascending)</item>
    </string-array>
    <string-array name="tb_pref_sort_order_alt">
        <item>Recently launched (descending)</item>
        <item>Recently launched (ascending)</item>
    </string-array>
    <string name="tb_pref_header_advanced">Advanced features</string>
    <string name="tb_pref_title_freeform_hack">Freeform window support</string>
    <string name="tb_pref_description_freeform_hack">Allows Taskbar to launch apps in freeform window mode, for a more desktop-like experience.\n\nThis feature is experimental, and may cause issues with standard split-screen multitasking.</string>
    <string name="tb_pref_header_about">About Taskbar</string>
    <string name="tb_pref_about_description">Taskbar: PC-style productivity for Android\n\n&#169; %1$d Braden Farmer\nApp logo by Mark Morilla\n\nClick here to check for updates or leave a rating! %2$s</string>
    <string name="tb_pref_about_description_alt">Taskbar: PC-style productivity for Android\n\n&#169; %1$d Braden Farmer\nApp logo by Mark Morilla</string>
    <string name="tb_pref_title_hide_taskbar">Collapse Taskbar when selecting items</string>
    <string name="tb_pref_title_launcher">Replace home screen</string>
    <string name="tb_pref_description_launcher">Use Taskbar as a home screen replacement</string>
    <string name="tb_set_wallpaper">Set wallpaper using&#8230;</string>
    <string name="tb_pref_disable_animations">Faster app switching</string>
    <string name="tb_pref_title_position">Position on screen</string>
    <string-array name="tb_pref_position_list">
        <item>Bottom left (horizontal)</item>
        <item>Bottom left (vertical)</item>
        <item>Bottom right (horizontal)</item>
        <item>Bottom right (vertical)</item>
        <item>Top left (horizontal)</item>
        <item>Top left (vertical)</item>
        <item>Top right (horizontal)</item>
        <item>Top right (vertical)</item>
    </string-array>
    <string name="tb_app_info">App info</string>
    <string name="tb_uninstall">Uninstall</string>
    <string name="tb_open_taskbar_settings">Open settings</string>
    <string name="tb_quit_taskbar">Quit</string>
    <string name="tb_pref_title_keyboard_shortcut">Enable keyboard shortcuts</string>
    <string name="tb_pref_description_keyboard_shortcut">Start/stop Taskbar: &#160; {fou_social-windows} + M &#160; {fou_magnifying-glass} + M\n\nShow start menu: &#160; {fou_social-windows} &#160; {fou_magnifying-glass}\n(requires Taskbar to be set as the assist app in Settings)</string>
    <string name="tb_pref_description_keyboard_shortcut_alt">Start/stop Taskbar\n&#8226; WinKey+M / Search+M\n\nShow start menu\n&#8226; WinKey / Search\n(requires Taskbar to be set as the assist app in Settings)</string>
    <string name="tb_loading_apps">Loading apps&#8230;</string>
    <string name="tb_press_enter">No apps found\n\nPress Enter to search using Google</string>
    <string name="tb_nothing_to_see_here">Nothing to see here, move along&#8230;</string>
    <string name="tb_error_dialog_title">Error</string>
    <string name="tb_error_dialog_message">Unfortunately, due to OEM restrictions, this feature can\'t be enabled on your device.\n\nYou may still be able to enable it by using this adb shell command:\n\nappops set %1$s %2$s allow</string>
    <string name="tb_action_ok">OK</string>
    <string name="tb_action_cancel">Cancel</string>
    <string name="tb_pin_app">Pin to recents</string>
    <string name="tb_unpin_app">Unpin from recents</string>
    <string name="tb_block_app">Block from recents</string>
    <string name="tb_unblock_app">Unblock from recents</string>
    <string name="tb_clear_pinned_apps">Reset per-app preferences</string>
    <string name="tb_pref_title_pinned_apps">管理置顶应用</string>
    <string name="tb_action_add_pinned_app">添加置顶应用</string>
    <string name="tb_action_remove">移除</string>
    <string name="tb_action_drag_to_reorder">拖拽排序</string>
    <string name="tb_pinned_apps_count">已置顶 %d 个应用</string>
    <string name="tb_reset_taskbar_offset">Reset taskbar offset</string>
    <string name="tb_pref_title_hide_foreground">Hide icon for foreground application</string>
    <string name="tb_pref_summary_hide_foreground">May reduce performance</string>
    <string name="tb_pref_title_theme">Theme</string>
    <string-array name="tb_pref_theme_list">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="tb_lock_device_not_supported">Not supported on this device</string>
    <string name="tb_pref_title_shortcut_icon">Show shortcut icon for pinned apps</string>
    <string name="tb_freeform_dialog_title">Enable freeform support</string>
    <string name="tb_freeform_dialog_message">In order for Taskbar to launch apps in freeform window mode, please follow these steps:\n\n&#8226; Go to Developer Options\n\n&#8226; Scroll to the bottom and turn on \"%s\"\n\n&#8226; Reboot your device</string>
    <string name="tb_pref_title_invisible_button">Hide button while Taskbar is collapsed</string>
    <string name="tb_pref_title_freeform_mode_help">Help &amp; instructions for freeform mode</string>
    <string name="tb_freeform_help_dialog_title">Help &amp; instructions</string>
    <string name="tb_freeform_help_dialog_message"><b>About freeform mode</b>\n\nTaskbar lets you launch apps in freeform floating windows on Android 7.0+ devices.  No root access is required, although Android 8.0, 8.1, and 9 devices require an adb shell command to be run during initial setup.\n\nSimply follow these steps to configure your device for launching apps in freeform mode:\n\n<b>1.</b> Check the box for \"Freeform window support\" inside the Taskbar app\n\n<b>2.</b> Follow the directions that appear in the pop-up to enable the proper settings on your device (one-time setup)\n\n<b>3.</b> Go to your device\'s recent apps page and clear all recent apps\n\n<b>4.</b> Start Taskbar, then select an app to launch it in a freeform window\n\n<i>For best results, especially on Android 8.0 and 8.1, restart your device before using freeform mode</i>\n\n<b>Window size presets</b>\n\nTaskbar can launch app windows in various preset sizes.  You can choose a window size by long-pressing or right-clicking an app icon and selecting \"New window.\"\n\nTo save a window size preset for a specific app, simply long-press the preset, and a checkmark will appear indicating that it is set as default.  Taskbar will launch the app using this selected size on subsequent launches.\n\nNote that window sizes don\'t work correctly on Android 8.0 and 8.1.  However, you can work around this by launching the app, immediately closing it, then launching it again from Android\'s overview menu.\n\n<b>Troubleshooting</b>\n\n<i>&#8226; Apps still launch fullscreen</i>\n\nIf an app is launched that is already loaded into memory, Taskbar will bring it into the foreground. In order to launch the app into freeform mode, it has to be launched from a fresh state.\n\nSwipe the app away from recents, and then re-launch it from the recent apps page using Taskbar. If this doesn\'t work, then long-press the app icon, select \"App info,\" and then force stop the app.  Alternatively, you can restart your device.\n\n<i>&#8226; Apps that are maximized cannot be restored into a window</i>\n\nIf you press the Maximize button on an app\'s title bar, Android will bring the app out of freeform mode and into fullscreen mode. As mentioned above, Taskbar can only launch apps into freeform windows if they are launched from a fresh state.\n\nTo fix this, you can maximize windows by tapping or clicking just outside the app\'s window frame.  This will expand the window to fill all the available space while keeping it in the freeform window workspace.\n\n<i>&#8226; Maximizing windows doesn\'t work on Android 9</i>\n\nThis functionality is beyond Taskbar\'s control and is something that Google needs to fix on their end. If you need to maximize a window on Android 9, please use the \"Maximized\" window size instead.\n\n<i>&#8226; App transitions don\'t seem to work properly, especially on Android 9</i>\n\nThis is also an issue that Google needs to fix on their end, however, you can work around it by disabling app transitions.\n\nYou can disable transitions when launching an app by going to Taskbar\'s recent apps settings and enabling the \"Faster app switching\" option. Alternatively, you can disable transitions system-wide by going to developer options and setting \"Transition animation scale\" to \"Animation off.\"</string>
    <string name="tb_action_developer_options">Open Developer Options</string>
    <string name="tb_action_close">Close</string>
    <string name="tb_pref_header_freeform">Freeform mode</string>
    <string name="tb_customize_icon">Customize icon</string>
    <string name="tb_customize_text">Display text (max 2 chars)</string>
    <string name="tb_custom_text_hint">Enter text...</string>
    <string name="tb_select_custom_icon">Choose icon</string>
    <string name="tb_reset_to_default">Reset to default</string>
</resources>